# pond

./: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  index.html  lorem-ipsum.txt  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.cursor/rules/: blueprint-driven-development.mdc  learning-log.mdc  react-vite-tailwind.mdc
backend/: .env.backup  .gitignore  DEPLOY.md  Dockerfile  FILES.md  FLY_DATABASE_SETUP.md  better-auth.config.ts  fly.toml  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: auth.ts  server.ts
docs/: VOICE_SYSTEM_ARCHITECTURE.md  app-blueprint.md  design-patterns.md  innio-enhancements-implemented.md  innio-lifelike-behavior-plan.md  jazz-framework-reference.md  jazz-integration-spec.md  learning-log.md  missing-fish-behaviors.md  pond-specification.md  project-blueprint.md  react-three-uikit-comprehensive-api-reference.md  refactor-plan.md  silk-api-reference.md
docs/completed/: FLY_DATABASE_SETUP.md  VOICE_SETUP.md  fish-analysis.md  fish-refactor-architecture.md  openai-agents-patterns.md  pond-crossfade-goals.md  pond-interaction-patterns.md  radial-markers-simplification-plan.md  zoom-crossfade.md
public/: manifest.json
public/models/: mindbody.glb  wellstone.glb
src/: App.tsx  Controls.tsx  Sheet.tsx  index.css  main.tsx  react-css-properties.d.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: .placeholder  icon.icns
src-tauri/src/: lib.rs  main.rs
src/VoiceChat/: CallButton.tsx  VoiceProvider.tsx  index.ts  types.ts
src/ai/: invokeInnio.ts
(+91 files in other folders)
