[package]
name = "pond"
version = "0.1.0"
description = "A meditative digital space with an interactive 3D pond"
authors = ["you"]
edition = "2021"

[lib]
name = "pond_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Enable devtools feature for debug builds (allows keyboard shortcuts and right-click inspect)
[features]
default = []
devtools = ["tauri/devtools"]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

